[530356] Finished updating default compiler settings
Fixed test failure, and also turned off match processor generation.
Additionally, added an entry to the release notes for VIATRA 2.0.

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.0.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.0.adoc
@@ -9,6 +9,14 @@ ifndef::imagesdir[:imagesdir: {rootdir}/../images]
 === Dependency updates
 Update minimum version of required dependencies 
 
+=== Code generator updates
+
+In VIATRA 2.0, the default behavior of query code generator was updated to reduce the number of generated files. This means, no `.util` package is generated, match and matcher code is generated as embedded subclasses, and match processors are not generated anymore.
+ 
+If necessary, the old generator behavior can be set by relying on the VQL Compiler settings.
+
+image::releases/17_viatra_compiler.png[]
+
 === Deprecated code removal
 
 All code marked as deprecated has been removed from the codebase. Additionally, further components were removed
