[530727] Added Streams and Optionals to the Query Matcher classes
Change-Id: I30f7b110d0a61803bdb0c17e924cddbb5622666b
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.0.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.0.adoc
@@ -91,6 +91,7 @@ The affected methods are the following:
  * PQueryHeader#getFirstAnnotationByName
  * CorePatternLanguageHelper#getFirstAnnotationByName
  * CorePatternLanguageHelper#getParameterByName
+ * ViatraQueryMatcher#getOneArbitraryMatch
 
 If the old behavior of returning `null` values is necessary the `Optional.orElse` call can be used, e.g. `query.getFirstAnnotationByName("Constraint").orElse(null);`
 
